[tool.poetry]
name = "bbq-first-util"
version = "0.1.0"
description = "Utilities for BBQ FIRST data"
authors = ["Justin Kleiber <jkleiber8@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bbq_first_util"}]

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.3.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
